test/instance-checks-9.err.expect
test/instance-checks-9.ktn:1:1: error: cannot solve scalar type constraint t1 (type of x) = int (from example)
test/instance-checks-9.ktn:1:1: note: t1 (type of x) is from here
test/instance-checks-9.ktn:1:13: note: int (from example) is from here
